# ezkey-admin-api/src/main/java/org/ezkey/integration/mapper/IntegrationControllerMapper.java
@@ -78,6 +78,7 @@ public interface IntegrationControllerMapper {
    * @return the corresponding IntegrationResponseDto
    */
   @Mapping(source = "tenant.tenantId", target = "tenantId")
+  @Mapping(source = "tenant.tenantName", target = "tenantName")
   @Mapping(
       target = "operational",
       expression =
